syntax = "proto3";

package api;
option go_package="./apipb";

service AnalyzerService {
  rpc Analyze(stream AudioBuf) returns (Empty);
}
service GatewayService {
  rpc UpdateStatus (StatusRequest) returns (StatusResponse);
}

message Empty {
}

message AudioBuf {
  int32 sensor_id = 1;      // e.g. 42
  uint32 seq_offset = 2;    // sequence number or cumulative frame offset
  bytes  pcm = 3;           // raw little-endian 16bit PCM
}

message StatusRequest {
  int32 sensor_id = 1;
  string status  = 2;
}

message StatusResponse {
  bool success = 1;
}
